# py32-metapac

./: Cargo.toml
src/: all_chips.rs  all_peripheral_versions.rs
src/chips/: metadata_0000.rs  metadata_0001.rs  metadata_0002.rs  metadata_0003.rs  metadata_0004.rs  metadata_0005.rs  metadata_0006.rs  metadata_0007.rs  metadata_0008.rs  metadata_0009.rs  metadata_0010.rs  metadata_0011.rs  metadata_0012.rs
src/chips/py32f002a/: metadata.rs  pac.rs
src/chips/py32f002aa15/: metadata.rs
src/chips/py32f002af15/: metadata.rs
src/chips/py32f002al15/: device.x  metadata.rs  pac.rs
src/chips/py32f002aw15/: metadata.rs
src/chips/py32f002ax5/: metadata.rs
src/chips/py32f002b/: device.x  metadata.rs  pac.rs
src/chips/py32f002bd15/: metadata.rs
src/chips/py32f002bf15/: metadata.rs
src/chips/py32f002bw15/: metadata.rs
src/chips/py32f002bx5/: metadata.rs
src/chips/py32f003f14/: metadata.rs  pac.rs
src/chips/py32f003f16/: metadata.rs
src/chips/py32f003f17/: metadata.rs
src/chips/py32f003f18/: metadata.rs  pac.rs
src/chips/py32f003f26/: metadata.rs  pac.rs
src/chips/py32f003f36/: metadata.rs  pac.rs
src/chips/py32f003f48/: metadata.rs
src/chips/py32f003f56/: metadata.rs
src/chips/py32f003f68/: metadata.rs
src/chips/py32f003l16/: metadata.rs
src/chips/py32f003l18/: metadata.rs  pac.rs
src/chips/py32f003l24/: metadata.rs
src/chips/py32f003l26/: metadata.rs
src/chips/py32f003l28/: device.x  metadata.rs  pac.rs
src/chips/py32f003w16/: metadata.rs
src/chips/py32f003w18/: metadata.rs  pac.rs
src/chips/py32f003x4/: metadata.rs
src/chips/py32f003x6/: metadata.rs
src/chips/py32f003x7/: metadata.rs  pac.rs
src/chips/py32f003x8/: metadata.rs
src/chips/py32f030e18/: metadata.rs
src/chips/py32f030e26/: metadata.rs
src/chips/py32f030f16/: device.x  metadata.rs  pac.rs
src/chips/py32f030f17/: metadata.rs  pac.rs
src/chips/py32f030f18/: metadata.rs
src/chips/py32f030f26/: device.x  metadata.rs
src/chips/py32f030f27/: metadata.rs  pac.rs
src/chips/py32f030f28/: pac.rs  (+1 more)
src/peripherals/: adc_v1.rs  adc_v1b.rs  adc_v2.rs  configbytes_f002b.rs  configbytes_f030.rs  configbytes_f072.rs  dbgmcu_f002b.rs  dbgmcu_f030.rs  dbgmcu_f072.rs  dma_f030.rs  dma_f072.rs  exti_v1.rs  flash_f002b.rs  flash_f030.rs  flash_f072.rs  gpio_common.rs  gpio_t020.rs  gpio_v1.rs  i2c_v1.rs  rcc_f002b.rs  rcc_f030.rs  rcc_f072.rs  spi_v1.rs  spi_v2.rs  syscfg_f002b.rs  syscfg_f030.rs  syscfg_f072.rs  timer_v1.rs  uid_v1.rs  usart_v1.rs  usb_v1.rs
src/registers/: adc_v1.rs  adc_v1b.rs  adc_v2.rs  configbytes_f002b.rs  configbytes_f030.rs  configbytes_f072.rs  dbgmcu_f002b.rs  dbgmcu_f030.rs  dbgmcu_f072.rs  dma_f030.rs  dma_f072.rs  exti_v1.rs  flash_f002b.rs  flash_f030.rs  flash_f072.rs  gpio_common.rs  gpio_t020.rs  gpio_v1.rs  i2c_v1.rs  rcc_f002b.rs  rcc_f030.rs  rcc_f072.rs  spi_v1.rs  spi_v2.rs  syscfg_f002b.rs  syscfg_f030.rs  syscfg_f072.rs  timer_v1.rs  uid_v1.rs  usart_v1.rs  usb_v1.rs
(+129 files in other folders)
